--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "next": "15.1.2",
+    "js-cookie": "^3.0.5",
+    "next": "^15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
